# somafractalmemory

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .tmp-requirements-docs.txt  .tmp2-requirements-docs.txt  AGENT.md  API_AUDIT_REPORT.md  API_DESIGN_ANALYSIS.md  ARCHITECTURE.md  CANONICAL_ROADMAP.md  CHANGELOG.md  COMPLIANCE_AUDIT.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_AUDIT_REPORT.md  Dockerfile  Dockerfile.api  Dockerfile.min  Dockerfile.runtime  Dockerfile.runtime-clone  Dockerfile.single  LICENSE  MEMORY_SCHEMA.md  MONOLITH.md  Makefile  PERFORMANCE.md  PORT_STRATEGY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  README_MINIMAL.md  ROADMAP.md  ROADMAP_V2.md  ROADMAP_V2_DETAILED.md  SECURITY.md  Tiltfile  VERSIONING.md  (+40 more)
.github/workflows/: ci.yml  deploy-soma-stack.yml  docs.yml  pre-commit.yml
.kiro/steering/: api-reference.md  coding-standards.md  infrastructure.md  project-overview.md  testing.md
alembic/: env.py  script.py.mako
alembic/versions/: 20251012_0001_initial_schema.py
archive/requirements/: requirements-light.txt  requirements.txt
benchmarks/: fast_core_smoke.py
benchmarks/learning/: README.md  generators.py  metrics.py  runner_smoke.py
common/: __init__.py  messages.py
common/config/: __init__.py  settings.py
common/utils/: __init__.py  async_metrics.py  etcd_client.py  logger.py  opa_client.py  redis_cache.py  trace.py  vault_client.py
docs/: ARCHITECTURE.md  ARCHITECTURE_ROADMAP.md  CANONICAL_DOCUMENTATION.md  CANONICAL_PROGRESS.md  COGNITIVE_MEMORY_DESIGN.md  COMPLIANCE_AUDIT.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_MODES.md  DEVELOPER_ENVIRONMENT.md  DEVELOPER_GUIDE.md  DEVELOPER_MANUAL.md  FAST_CORE_MATH.md  METRICS.md  OPERATIONAL.md  OPS_MANUAL.md  PORT_FORWARDING_IMPROVEMENTS.md  PRODUCTION_READINESS.md  PRODUCTION_READY_GAP.md  QUICKSTART.md  README.md  README_canonical.md  ROADMAP.md  SECURITY_ROADMAP.md  SOMABRAIN_3_0_CANONICAL_ROADMAP.md  SOMABRAIN_3_0_COMPLIANCE_PLAN.md  SPRINT_PLAN.md  SRS-SOMAFRACTALMEMORY-MASTER.md  STATUS.md  STYLE_GUIDE.md  TASKS-MERGED-SOMAFRACTALMEMORY.md  TOC.md  USAGE_GUIDE.md  USER_GUIDE.md  accessibility.md  api-reference.md  api.md  architecture.md  changelog.md  (+14 more)
docs/_templates/: doc-template.md  document-template.md
docs/archive/: SOMABRAIN_DEV_PERSISTENT.md
docs/deprecated/: ROADMAP.md
docs/development-manual/: api-reference.md  coding-standards.md  contributing.md  contribution-process.md  index.md  local-setup.md  testing-guidelines.md
docs/grafana/: soma_dashboard.json
docs/onboarding-manual/: QUICKSTART.md  codebase-walkthrough.md  domain-knowledge.md  environment-setup.md  first-contribution.md  index.md  onboarding-timeline.md  project-context.md  team-collaboration.md
docs/ops/: DOCKER_SHARED_INFRA_GAP.md  KAFKA_OPEN_SOURCE.md  KUBERNETES.md  LENS_INTEGRATION.md  MIGRATIONS.md  OBSERVABILITY.md  SECRET_MANAGEMENT.md  SHARED_INFRA_DOCKER.md  SOMASTACK_SHARED_INFRA_PLAYBOOK.md  SPRINT_EXECUTION_PLAN.md  deployment.md  (+2 more)
eventing/: producer.py
examples/: README.md  api.py  api_enterprise.py  benchmark.py  enterprise_api.py  math_api.py  metrics_server.py  produce_sample_event.py  quickstart.py  seed_and_query.py
helm/: Chart.yaml  kind-config.yaml  values-app-only.yaml  values-dev-full-persistent.yaml  values-dev-port9696.yaml  values-dev-port9797.yaml  values-dev-port9999.yaml  values-full-dev.yaml  values-kind.yaml  values-local-dev.yaml  values-local.yaml  values-prod-ha.yaml  values-production.yaml  values-test.yaml  values.yaml
k8s/: deployment.yaml  namespace.yaml  port-forwarder.yaml  postgres.yaml  pvcs.yaml  qdrant.yaml  redis.yaml  service.yaml
langfuse/: __init__.py
proto/: memory.proto
qdrant.db/: meta.json
redpanda/: Dockerfile
schemas/: memory.event.json
scripts/: README.md  assign_ports_and_start.sh  audit-docs.py  auto-server.sh  backup-postgres.sh  backup_restore.py  bootstrap.sh  ci_smoke_test.sh  create-kind-soma.sh  deploy-kind-full.sh  deploy-kind-sharedinfra.sh  deploy-stack.sh  deploy_somabrain.sh  diagnose_sfm.py  docker-entrypoint.sh  free_port.sh  generate-global-env.sh  generate-sharedinfra-secrets.sh  generate_openapi.py  generate_protos.py  generate_requirements.py  inject_frontmatter_from_content.py  insert_100_memories.py  launchd.port-forward.soma.plist.template  port_forward_api.sh  preload-sharedinfra-images.sh  reliable_port_forward.sh  render-values-for-mode.sh  reset-sharedinfra-compose.sh  resumable_seed.py  run_ci.sh  run_consumers.py  run_docker_ci.sh  run_server.sh  save_progress.sh  scan_coverage.py  sharedinfra-health.sh  show-ports.sh  start-dual-servers.sh  start_all.sh  (+7 more)
somafractalmemory/: __init__.py  asgi.py  async_grpc_server.py  cli.py  core.py  factory.py  grpc_server.py  http_api.py  memory_pb2.py  memory_pb2_grpc.py  minimal_core.py  models.py  serialization.py  services.py  settings.py  urls.py  wsgi.py
somafractalmemory.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  conftest.py  run_10_cycle_audit.sh  test_additional.py  test_advanced_decay_helper.py  test_agent_features.py  test_bulk_1000.py  test_bulk_store.py  test_cli.py  test_cli_export_import.py  test_cli_neighbors_range.py  test_cli_path.py  test_consumer_smoke.py  test_coordinate_range.py  test_core.py  test_deep_integration.py  test_delete_idempotent.py  test_encryption_optional.py  test_end_to_end_memory.py  test_enterprise.py  test_enterprise_full.py  test_eviction_index.py  test_eviction_update.py  test_exception_logging.py  test_export_import.py  test_factory.py  test_factory_inmemory_vector.py  test_faiss_aperture.py  test_fast_core_math.py  test_filters.py  test_fractal_inmemory_store.py  test_full_infra_e2e.py  test_full_stack_enterprise_round_trip.py  test_graph_link_type.py  test_http_api_coord_validation.py  test_http_auth.py  test_importance_sync_vector_payload.py  test_kafka_event_flow.py  test_learning_adaptive.py  test_live_integration.py  (+18 more)
typings/: django-stubs.pyi
workers/: kv_writer.py  vector_indexer.py
(+329 files in other folders)
