[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "somafractalmemory"
version = "0.2.0"
description = "100% Django-based fractal memory system."
authors = [
  { name="SomaTech", email="ai@somatech.lat" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Django",
  "Operating System :: OS Independent",
]

# 100% Django - lean dependencies only
dependencies = [
  "django>=4.2,<5.0",
  "django-ninja>=1.3.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.2.0",
  "pymilvus>=2.4.0",
  "numpy>=1.24.0",
  "prometheus-client",
  "structlog",
  "pydantic-settings",
  "opentelemetry-api==1.37.0",
  "opentelemetry-sdk==1.37.0",
  "networkx",
  "hvac>=2.0",
  "django-environ>=0.12.0",
  "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-django",
  "hypothesis>=6.0.0",
  "testcontainers",
  "ruff",
  "bandit",
  "build",
  "requests",
]

[project.urls]
"Homepage" = "https://github.com/somatechlat/somafractalmemory"
"Bug Tracker" = "https://github.com/somatechlat/somafractalmemory/issues"

[project.scripts]
soma = "somafractalmemory.cli:main"

[tool.setuptools.packages.find]
include = ["somafractalmemory"]
exclude = ["tests", "docs", "site"]

[tool.setuptools.package-data]
somafractalmemory = ["py.typed", "**/*.json", "**/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.isort]
known_first_party = ["somafractalmemory"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = false
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-q -ra --maxfail=1"
testpaths = ["tests"]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
